--- a/MusicaNoba_v1/MusicaNoba_v1.csproj
+++ b/MusicaNoba_v1/MusicaNoba_v1.csproj
@@ -64,4 +64,9 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
