--- a/MusicaNoba_v1/MusicaNoba_v1.csproj
+++ b/MusicaNoba_v1/MusicaNoba_v1.csproj
@@ -65,6 +65,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Controllers\" />
       <Folder Include="Services\" />
     </ItemGroup>
 
