--- a/MusicaNoba_v1/MusicaNoba_v1.csproj
+++ b/MusicaNoba_v1/MusicaNoba_v1.csproj
@@ -58,6 +58,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
@@ -66,7 +67,6 @@
 
     <ItemGroup>
       <Folder Include="Controllers\" />
-      <Folder Include="Services\" />
     </ItemGroup>
 
 </Project>
